--- a/react_js/src/locale/bg.json
+++ b/react_js/src/locale/bg.json
@@ -15,6 +15,7 @@
       "Delete": "Изтрий",
       "Delete all": "Изтрий всичко",
       "pcs": "бр",
+      "for": "за",
       "My": "Мойте",
       "must be at least 3 symbols": "трябва да е поне 3 символа",
       "at least one author": "поне един автор",
