Check for author already exist

--- a/react_js/src/locale/bg.json
+++ b/react_js/src/locale/bg.json
@@ -33,5 +33,6 @@
       "Add successful" : "Добавянето е успешно",
       "Change successful" : "Промяната е успешна",
       "Author and his books deleted" : "Авторът и неговите книги са изтрити",
-      "Min 3 symbols": "Минимум 3 символа"
+      "Min 3 symbols": "Минимум 3 символа",
+      "Author already exist": "Автора вече съществува"
 }
