--- a/react_js/src/locale/bg.json
+++ b/react_js/src/locale/bg.json
@@ -34,5 +34,5 @@
       "Change successful" : "Промяната е успешна",
       "Author and his books deleted" : "Авторът и неговите книги са изтрити",
       "Min 3 symbols": "Минимум 3 символа",
-      "Author already exist": "Автора вече съществува"
+      "Author already exists": "Автора вече съществува"
 }
